public interface UIMenu {
        //Test
        void goBack();

        void showMenu();
}
